[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "astral-ipc"
version = "0.1.0"
description = "Python client for the astrald apphost IPC protocol (Astral Network)"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "astral-py contributors" }]
keywords = ["astral", "astrald", "apphost", "ipc", "p2p", "network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Networking",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/cryptopunkscc/astral-docs"

[project.scripts]
astral-query = "astral.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
astral = ["py.typed"]
